--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,18 @@
     font-size: 2em;
     font-style: italic;
 }
+#projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    background-color: blue;
+}
+#projects #project-title{
+color: white;
+font-size: 3em;
+text-decoration: underline;
+
+
+}
