--- a/styles.css
+++ b/styles.css
@@ -41,14 +41,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
-    background-color: blue;
+    background-color: rgb(99, 99, 186);
 }
 #projects #project-title{
 color: white;
 font-size: 3em;
-text-decoration: underline;
+padding-bottom: 0.2em;
+border-bottom: 2px solid;
+}
 
+#projects .project-tile{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+#projects .project-tile img{
+    max-height: 20em;
+    max-width: 20em;
+}
+
+#contact a img{
+    max-width: 30px;
 }
